--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-router": "^3.0.3",
+    "vue-socket.io": "^2.1.1",
+    "vue-socket.io-extended": "^3.2.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
